k8s-operator/config/integrations/litellm/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: litellm-policy
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - ports:
        - port: 443
          protocol: TCP
        - port: 80
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - ports:
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gke-managed-otel
          podSelector:
            matchLabels:
              app: opentelemetry-collector
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: platform-agent
        - podSelector:
            matchLabels:
              group: operator-agent
        - podSelector:
            matchLabels:
              group: devteam-agent
      ports:
        - port: 4000
          protocol: TCP
        - port: 80
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gke-gmp-system
      ports:
        - port: 4000
          protocol: TCP
  podSelector:
    matchLabels:
      app: litellm
  policyTypes:
    - Ingress
    - Egress
